@@ -4,6 +4,7 @@ ChangeLog
  * 27Sep2021 Fixes states in OpenMP taskgroup and taskloop regions 
  + 22Sep2021 Adds dependency lines between instantiation and execution of OpenMP tasks for GNU libgomp runtime
  + 06Sep2021 Adds missing wrapper for __kmpc_critical_with_hint
+ + 31Aug2021 Extends communications matching algorithm to support applications calling MPI_Irecv and MPI_Wait from different threads
  * 24Aug2021 Fixes unreleased mutex in xtr_hash_query and xtr_hash_add
  * 05Aug2021 Creates new event handler for ADD_RESERVED_MEM_EV and SUB_RESERVED_MEM_EV 
  * 05Aug2021 Fix wrong arguments for mpi_win_lock and mpi_compare_and_swap wrappers
